# Chatqiniu

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  DEVELOP.md  LICENSE  README.en.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  preview.yaml  publish.yml
docs/: index.en.md  index.md
index.en/: index.html
search/: search_index.json
src/chatqiniu/: __init__.py  apps.py  cli.py  client.py  config.py  formatting.py
tests/: test_cli.py  test_version.py
tests/cli-tests/: README.md  test_chatqiniu_basic.md  test_chatqiniu_basic.py  test_live_readonly.py
tests/code-tests/: README.md  test_apps_registry.py  test_config_provider.py
tests/mock-cli-tests/: README.md  test_cli_commands.py
