[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Chatqiniu"
dynamic = ["version"]
description = "Chatqiniu: ChatArch Python package for Qiniu workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["click>=8.0", "chatstyle>=0.1.0", "chatenv>=0.1.1", "requests>=2.31.0"]
authors = [{name = "ChatArch", email = "1073853456@qq.com"}]
keywords = ["chatqiniu", "chatarch", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ChatArch/Chatqiniu"
Repository = "https://github.com/ChatArch/Chatqiniu"
Documentation = "https://ChatArch.github.io/Chatqiniu"

[project.scripts]
chatqiniu = "chatqiniu.cli:main"

[project.entry-points."chatenv.configs"]
qiniu = "chatqiniu.config"

[project.optional-dependencies]
dev = ["build", "pytest", "twine"]
docs = ["mkdocs>=1.4.0", "mkdocs-material>=9.0.0", "mike>=2.0.0"]

[tool.setuptools.dynamic]
version = {attr = "chatqiniu.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true
